--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="col-md-6" style="height : 500px; background-color : red;">
+  <div class="col-xs-12" style="height : 20px;">
+
+  </div>
+  <div class="container-fluid">
+    <div class="col-md-6" style="height : 500px;">
 
     </div>
   </div>
+
+  <script type="text/javascript" src="js/algo.js">
+  </script>
+
 </body>
 
 </html>
