--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </div>
   </div>
 
-  <script type="text/javascript" src="js/algo.js">
-  </script>
+  <script type="text/javascript" src="js/algo.js"></script>
+  <script type="text/javascript" src="js/jquery.js"></script>
 
 </body>
 
