--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                    <form action="#" accept-charset="UTF-8" class="form-horizontal">
                       <div class="form-body">
                            <div class="form-group ">
-                            <label for="Nom" class="col-md-3 control-label">Wmax</label>
+                            <label  class="col-md-3 control-label">Wmax</label>
 
                             <div class="col-md-4">
                               <input class="form-control " required="required" name=" name" type="text">
@@ -65,7 +65,7 @@
                            </div>
 
                             <div class="form-group">
-                               <label for="Tableau des objets" class="col-md-3 control-label">Tableau des objets</label>
+                               <label  class="col-md-3 control-label">Tableau des objets</label>
                                <br>
                                 <!--Le tableau-->
                                      <div class="container" style="width: 50%">
@@ -88,7 +88,7 @@
                                             <tbody>
                                               <tr id='addr0'>
                                                 <td>
-                                                1
+                                                objet1
                                                 </td>
                                                 <td>
                                                 <input type="text" name='value'  placeholder='valeur' class="form-control"/>
