display dynamic results in table

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+    <!--/***************************************-->
+    <!--***BAZINE Tarek - CHIKHAISSA Mahfoud****-->
+    <!--****ESI 2017/18 TPGO TP1****-->
+    <!--****************************************/-->
+  <title>Sac a dos</title>
   <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
   <link rel="stylesheet" href="css/theme.css" type="text/css" />
 </head>
