--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <title>Sac-a-dos Resolvant</title>
     <!--/***************************************-->
     <!--***BAZINE Tarek - CHIKHAISSA Mahfoud****-->
     <!--****ESI 2017/18 TPGO TP1****-->
@@ -10,6 +11,7 @@
   <title>Sac a dos</title>
   <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
   <link rel="stylesheet" href="css/theme.css" type="text/css" />
+  <link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -22,7 +24,7 @@
             <a href="#"><img src="img/knapsack.png" alt="knapsack" class="img-responsive"></a> 
         </div>  
         <div class="col col-lg-4 col-sm-3 col-md-4  bg-succes bg-succes text-primary center-block "> 
-          <h2>SAC-A-DOS résolvant</h2>
+          <h2>SAC-A-DOS Résolvant</h2>
         </div>
         <div class="col col-sm-1 col-md-3 col-lg-3  "></div>
         <div class="col col-sm-4 col-md-4 col-lg-4 " style="margin-top: 25px"> 
@@ -43,15 +45,20 @@
                  <div class="row ">
                       <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 center-block">
                              <div class="para">
-                               <p>lkdsf dlsfds fldsmkfds fmldsf xmdlfsdf sdmlfkds fsdmlfksdq fdmslkfd   fsdlfksdf sdlmfksd fmsdqkfdfmldkh fdfdmg  gfdmglfdg dfmgdf gmlfdg fdmgf gfpgfdgfd gmfdlg fdglfdg fdgmlfgf dgmfdg fdglfd:g, fdhgf:d,g fdgmfdg.<br>
-                               lfdklgjfdlkglmsdf sldkfsdlmfd sfmldskfds fmldsf dsmkfds fmdsfkd
-                               dsmlfkdlsf mldsfkd mldsfksmdlf.<br>
-                               sdmlfldsf mdsfmsd fùmdsf dmfd sk54f 64d65g mdsfdsfdg
-                               sdfdsgkldsfgkfgkmsdflsdmgkfhgsdgf.</p>
+                               <p>On dispose de objets de poids positifs et de valeurs
+                                positives , respectivement.<br>
+                                On a un sac à dos de capacité maximale en poids de W.<br>
+                                <br>
+                               <span class="text-primary"><b>Problème: </b></span> Remplir le sac à dos de sorte de maximiser
+                                la valeur des objets inclus tout en respectant
+                                la contrainte de poids. <br>
+                                </p>
+                                <p><span class="text-primary"><b>La formule du problème:</b></span></p>
+                                <img src="img/formula.png" class="img-center img-responsive formula_img " >
                               </div>
                      </div>
                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 center-block">
-                        <img src="img/knapsack2.png" class="img-center img-responsive  ">
+                        <img src="img/knapsack2.png" class="img-center img-responsive">
                    </div>
                   </div>
                  <br>
@@ -59,16 +66,16 @@
                  <h3><span class="label label-default">Application</span></h3>
                  <br>                  
                    <form action="#" accept-charset="UTF-8" class="form-horizontal">
-                      <div class="form-body">
+                      <div class="form-body" >
                            <div class="form-group ">
                             <label  class="col-md-3 control-label">Wmax</label>
 
                             <div class="col-md-4">
-                              <input class="form-control " required="required" name=" name" type="text">
+                              <input class="form-control numbersOnly" required="required" name="vmax" type="text" value=0>
                             </div>
                            </div>
 
-                            <div class="form-group">
+                            <div class="form-group" >
                                <label  class="col-md-3 control-label">Tableau des objets</label>
                                <br>
                                 <!--Le tableau-->
@@ -95,10 +102,10 @@
                                                 objet1
                                                 </td>
                                                 <td>
-                                                <input type="text" name='value'  placeholder='valeur' class="form-control"/>
+                                                <input type="text" name='value'  placeholder='valeur' class="form-control numbersOnly" value=0 required="required" />
                                                 </td>
                                                 <td>
-                                                <input type="text" name='weight' placeholder='poid' class="form-control"/>
+                                                <input type="text" name='weight' placeholder='poids' class="form-control numbersOnly" value=0 required="required" />
                                                 </td>
                                               </tr>
                                               <tr id='addr1'></tr>
@@ -106,7 +113,8 @@
                                           </table>
                                         </div>
                                       </div>
-                                      <a id="add_row" class="btn btn-default pull-left">Ajouter</a><a id='delete_row' class="pull-right btn btn-default">Supprimer</a>
+                                      <a id='add_row' class="btn btn-success btn-circle btn-lg pull-left" ><i class="fa fa-plus "></i></a>
+                                      <a id='delete_row' class="btn btn-danger btn-circle btn-lg pull-right" ><i class="fa fa-minus "></i></a>
                                     </div>
 
                             </div>
@@ -115,8 +123,7 @@
                         <div class="form-actions">
                           <div class="row">
                            <div class="col-md-offset-3 col-md-4">
-                             <input class="btn btn-circle green" type="submit" value="Soumettre">
-                           </div>
+                             <input type="submit" class="btn btn-circle green" type="submit" value="Soumettre" id="btn-submit" >
                           </div>
                          </div>        
                       </form>
