--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
                         
                         <div class="form-actions">
                           <div class="row">
+                           <div class="col-md-2 col-lg-2 col-sm-2 col-xs-2"></div>
                            <div class="col-md-offset-3 col-md-4">
                              <input type="submit" class="btn btn-circle green" type="submit" value="Soumettre" id="btn-submit" >
                           </div>
