--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sac-a-dos Resolvant</title>
     <!--/***************************************-->
     <!--***BAZINE Tarek - CHIKHAISSA Mahfoud****-->
@@ -40,14 +41,42 @@
                 </div>
                 <div class="col col-sm-1 col-md-3 col-lg-3  "></div>
                 <div class="col col-sm-4 col-md-4 col-lg-4 " style="margin-top: 25px">
-                    <button class="btn btn-primary btn-block">A propos</button>
+                    <button type="button" class="btn btn-primary btn-block"  data-toggle="modal" data-target="#aprpos">A propos</button>
                 </div>
             </div>
         </div>
     </nav>
 </header>
+
+                                <!-- Modal -->
+                                <div class="modal fade" id="aprpos" role="dialog" style="">
+                                    <div class="modal-dialog modal-sm">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                                <h4 class="modal-title"><b>SAC-A-DOS Résolvant</b></h4>
+                                            </div>
+                                            <div class="modal-body">
+                                                <p><b>Développé par:</b><br>
+                                                    BAZINE Tarek <br>
+                                                    CHIKH AISSA Mahfoud <br><br>
+                                                    <b>Dirigé par:</b><br>
+                                                    M. HADIM B<br><br>
+                                                    Tous les droits sont réservés ESI/SIL-2017</p>
+
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+<!-- page body -->
 <div class="container-bg">
     <div class="container">
+
         <div class="col col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
         <div class="col col-lg-10 col-md-10 col-sm-10 col-xs-10 well">
             <div class="row">
@@ -167,6 +196,7 @@
 <script type="text/javascript" src="js/jquery.cookie.js"></script>
 <script type="text/javascript" src="js/tableau.js"></script>
 <script type="text/javascript" src="js/algo.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script>
     $("#btn-detail").click(function () {
         if (
