--- a/algo-details.html
+++ b/algo-details.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Algorithme detaillé</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     <!--/***************************************-->
     <!--***BAZINE Tarek - CHIKHAISSA Mahfoud****-->
     <!--****ESI 2017/18 TPGO TP1****-->
