--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sac-a-dos Resolvant</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     <!--/***************************************-->
     <!--***BAZINE Tarek - CHIKHAISSA Mahfoud****-->
     <!--****ESI 2017/18 TPGO TP1****-->
